--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,18 +15,18 @@
         android:textStyle="bold"
         android:textSize="24sp"
         android:textColor="@color/gray"
-        android:text="@string/tasks"
+        android:text="@string/label_tasks"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="16dp"
         app:srcCompat="@drawable/ic_add_button"
-        android:contentDescription="@string/add_button"/>
-
+        android:contentDescription="@string/label_add_new_task"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
