correcoes de codigo

--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -44,6 +44,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/gray"
             android:inputType="text"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -63,6 +64,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="180dp"
+            android:textColor="@color/gray"
             android:inputType="textMultiLine" />
 
     </com.google.android.material.textfield.TextInputLayout>
