--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -30,6 +30,7 @@
         tools:text="01/01/2021 18:00" />
 
     <ImageView
+        android:id="@+id/iv_more"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:contentDescription="@string/open_more_opt"
